// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfobarCustomerActions component should not render "merge" button because there is no customer to merge the selected customer with 1`] = `
<div
  class="float-right d-none d-md-block"
>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-a432 mr-2 ui-button-fill-a432 ui-button-secondary-a432"
    id="confirm-1"
    type="button"
  >
    <span
      class="ui-button-content-a432"
    >
      Set as customer
    </span>
  </button>
</div>
`;

exports[`InfobarCustomerActions component should not render "set as customer" button because the agent is not on a ticket 1`] = `
<div
  class="float-right d-none d-md-block"
>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-a432 ui-button-fill-a432 ui-button-secondary-a432"
    type="button"
  >
    <span
      class="ui-button-content-a432"
    >
      Merge
    </span>
  </button>
</div>
`;

exports[`InfobarCustomerActions component should not render "set as customer" nor "merge" buttons because the customers are the same 1`] = `
<div
  class="float-right d-none d-md-block"
/>
`;

exports[`InfobarCustomerActions component should render "set as customer" and "merge" button 1`] = `
<div
  class="float-right d-none d-md-block"
>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-a432 mr-2 ui-button-fill-a432 ui-button-secondary-a432"
    id="confirm-2"
    type="button"
  >
    <span
      class="ui-button-content-a432"
    >
      Set as customer
    </span>
  </button>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-a432 ui-button-fill-a432 ui-button-secondary-a432"
    type="button"
  >
    <span
      class="ui-button-content-a432"
    >
      Merge
    </span>
  </button>
</div>
`;
